<resources>
    <string name="app_name">Mindful Productivity</string>

    <string name="goals_heading">GOALS</string>

    <string name="home_button_text">Home</string>

    <string name="coin_count_label">Coin count:</string>

    <string name="sample_image_label">Sample image</string>

    <string name="studytime_label">Time to study</string>

    <string name="welcome">Welcome!</string>
    <string name="directions">Enter the amount of time you want to take a break for and the amount of time you want to study for, and then press start to begin studying. The study time page will display a timer, and you will also have access to the goals page where you can write down several goals. Once your study time is over, you will be brought to a page that displays the amount of time left in your break. You will be able to click the activity button which will bring you to a paint by numbers activity.</string>
    <string name="start">Start</string>
    <string name="study_time">Enter study time in minutes here</string>
    <string name="study_time_hint">Enter study time in minutes here</string>
    <string name="break_time">Enter break time in minutes here</string>
    <string name="break_time_hint">Enter break time in minutes here</string>

    <string name="cloud">Cloud</string>

    <string name="selectImageLabel">Select an image</string>

    <string name="sampleImageLabel">Sample image</string>

    <string name="begin">com.example.studybreakapp.start</string>
    <string name="studyTime">com.example.studybreakapp.studyTime</string>
    <string name="breakTime">com.example.studybreakapp.breakTime</string>

    <string name="breaktime_label">Time to take a break</string>
    <string name="activity_label">Activity</string>
    <string name="time_left_string">Time Left:</string>
</resources>